--- a/Security-Certification-Roadmap9.html
+++ b/Security-Certification-Roadmap9.html
@@ -69,8 +69,7 @@ body.candidate-view .candidate-only {
   display: inline-block;
 }
 /* === END: Candidate View Visibility Rules === */
-  
-  /* === BEGIN: Cert Popup Style (added by @RealCyberJim) === */
+/* === BEGIN: Cert Popup Style (added by @RealCyberJim) === */
   .cert-popup-menu {
     position: absolute;
     background-color: white;
@@ -95,7 +94,6 @@ body.candidate-view .candidate-only {
   .cert-popup-menu button:hover {
     background-color: #f0f0f0;
   }
-
 /* === END: Cert Popup Style === */
 
 
@@ -1047,10 +1045,9 @@ body.candidate-view .candidate-only {
                                     <div class="spacer5"></div>
                                     <div class="spacer5"></div>
                                     <div class="spacer10"></div>
-
-
-
-
+                                <!-- certification tiles now include:
+                                1. the certlink class
+                                2. the data-cert-id attribute (unique for each cert) -->
                                     <a class="redopsitem1 certlink" data-cert-id="OPS_osee" 
                                     href="https://www.offensive-security.com/awe-osee/" tooltipright="Offensive Security Exploitation Expert
                                     $5,000 lab
@@ -2263,7 +2260,8 @@ psd" href="https://www.scrum.org/professional-scrum-developer-certification" too
                                     <div class="spacer"></div>
                                     <a class="iamitem1 certlink" data-cert-id="IAM_sfciamd" 
                                     href="https://trailhead.salesforce.com/help?article=Salesforce-Certified-Identity-and-Access-Management-Designer-Exam-Guide" tooltiptext="SalesForce Certified Identity and Access Management Designer
-                    $400 exam" tabindex="0" target="_blank">SF CIAMD</a>                                    <div class="spacer"></div>
+                    $400 exam" tabindex="0" target="_blank">SF CIAMD</a>
+                                    <div class="spacer"></div>
                                     <a class="engineeritem1 certlink" data-cert-id="ENG_gcld" 
                                     href="https://www.giac.org/certifications/cloud-security-essentials-gcld/" tooltiptext="GIAC Cloud Security Essentials
                     $979 exam SANS course recommended" tabindex="0" target="_blank" >GCLD</a>
@@ -2305,8 +2303,8 @@ psd" href="https://www.scrum.org/professional-scrum-developer-certification" too
                                     href="https://www.itgovernance.co.uk/shop/product/managing-cyber-security-risk-training-course" tooltiptext="IBITGQ Certified in Managing Cyber Security Risk
                     $2,629 course exam
                     Branded course required" tabindex="0" target="_blank" >CCRMP</a>
-                                    <a class="mgmtitem1 certlink" data-cert-id="RSK_pecb
-27005rm" href="https://pecb.com/en/education-and-certification-for-individuals/iso-iec-27005/iso-iec-27005-risk-manager" tooltiptext="PECB ISO/IEC 27005 Risk Manager
+                                    <a class="mgmtitem1 certlink" data-cert-id="RSK_pecb27005rm" 
+                                    href="https://pecb.com/en/education-and-certification-for-individuals/iso-iec-27005/iso-iec-27005-risk-manager" tooltiptext="PECB ISO/IEC 27005 Risk Manager
                     ~$995 exam
                     Course required" tabindex="0" target="_blank" >PECB 27005RM</a>
                                     <a class="mgmtitem1 certlink" data-cert-id="RSK_csba" 
@@ -2498,7 +2496,8 @@ psd" href="https://www.scrum.org/professional-scrum-developer-certification" too
                                     <div class="spacer"></div>
                                     <a class="iamitem1 certlink" data-cert-id="IAM_cist" 
                                     href="https://www.identitymanagementinstitute.org/cist/" tooltiptext="IMI Certfied Identity and Security Technologist
-                    $295 exam" target="_blank">CIST</a>                                    <div class="spacer"></div>
+                    $295 exam" target="_blank">CIST</a>
+                                    <div class="spacer"></div>
                                     <div class="spacer"></div>
                                     <a class="engineeritem1 certlink" data-cert-id="ENG_googlepcse" 
                                     href="https://cloud.google.com/certification/cloud-security-engineer" tooltiptext="Google Professional Cloud Security Engineer
@@ -2621,7 +2620,8 @@ psd" href="https://www.scrum.org/professional-scrum-developer-certification" too
                                     <div class="spacer"></div>
                                     <a class="iamitem1 certlink" data-cert-id="IAM_sc300" 
                                     href="https://docs.microsoft.com/en-us/learn/certifications/identity-and-access-administrator/" tooltiptext="Microsoft Certfied: Identity and Access Administrator Associate
-                    $165 exam" target="_blank">SC-300</a>                                    <div class="spacer"></div>
+                    $165 exam" target="_blank">SC-300</a>
+                                    <div class="spacer"></div>
                                     <a class="engineeritem1 certlink" data-cert-id="ENG_csaccsk" 
                                     href="https://cloudsecurityalliance.org/education/ccsk/" tooltiptext="Cloud Security Alliance Certificate of Cloud Security Knowledge
                     $395 exam" tabindex="0" target="_blank" >CSA CCSK</a>
@@ -3032,7 +3032,8 @@ psd" href="https://www.scrum.org/professional-scrum-developer-certification" too
                                     <div class="spacer5"></div>
                                     <a class="iamitem1 certlink" data-cert-id="IAM_sc900" 
                                     href="https://docs.microsoft.com/en-us/learn/certifications/security-compliance-and-identity-fundamentals/" tooltiptext="Microsoft Certified: Security, Compliance, and Identity Fundamentals
-                    $99 exam" tabindex="0" target="_blank" >SC-900</a>                                    <div class="spacer"></div>
+                    $99 exam" tabindex="0" target="_blank" >SC-900</a>
+                                    <div class="spacer"></div>
                                     <a class="engineeritem1 certlink" data-cert-id="ENG_cloudessnt" 
                                     href="https://www.comptia.org/certifications/cloud-essentials" tooltiptext="CompTIA Cloud Essentials
                     $138 exam" tabindex="0" target="_blank" >Cloud Essnt</a>
