Update index.html with latest changes

--- a/Security-Certification-Roadmap9.html
+++ b/Security-Certification-Roadmap9.html
@@ -148,7 +148,7 @@
         
         .cert-toolbar {
         text-align: center;
-        margin-top: 1vmax; /* reduced from 4vmax */
+        margin-top: 4vmax;
         }
         /* === END: Cert Popup Style === */
 /*  === END Cert Tracker Integration === */
