sync minor housekeeping and syntax

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <style>
 
+/*  === 
+  This project is provided freely under the terms of the Creative Commons Attribution-ShareAlike 4.0 International License.
+  While use is unrestricted under the license, I (@RealCyberJim) ask that if this work (or derivative works) are used in revenue-generating 
+  contexts, you consider reaching out to discuss appropriate attribution, support, or collaboration. Thank you. === */
 
-/*  === Cert Tracker Integration (added by @RealCyberJim) === 
+/*  === Cert Tracker Integration (added by @RealCyberJim) 
 
         On Desktop/iOS/android:
         - In default view, click a tile to go to that vendor's page.
@@ -23,8 +27,7 @@
             - certname: lowercase, normalized label (no spaces/symbols, + becomes 'plus')
             - Example: OPS__ceh, OPS__pentestplus, 
         
-        This structure ensures uniqueness, enables filtering, and supports scaling
-        to all 481 certs across roadmap sections. THIS MAY BE OVERKILL, I KNOW.
+        This structure ensures uniqueness, enables filtering, and supports scaling to all certs across roadmap sections.
           
                 NET - (Green) - Communication & Network Security
                 IAM - (Teal) - Identity & Access Management
@@ -1119,7 +1122,7 @@
                     In person in the UK">CREST CRTSA</a>
 <div class="spacer"></div>
 <div class="spacer"></div>
-<a class="mgmtitem2 certlink" data-cert-id="RSK_itilmaster" data-vendor="peoplecert" href="https://www.axelos.com/certifications/itil-certifications/itil-master" tabindex="0" target="_blank" tooltiptext="ITIL Master
+<a class="mgmtitem2 certlink" data-cert-id="RSK_itilmaster" data-vendor="itil" href="https://www.axelos.com/certifications/itil-certifications/itil-master" tabindex="0" target="_blank" tooltiptext="ITIL Master
                     $4,000 Interview">ITIL Master</a>
 <div class="spacer10"></div>
 <div class="spacer10"></div>
@@ -2763,7 +2766,7 @@ psd" data-vendor="scrumorg" href="https://www.scrum.org/professional-scrum-devel
         <option value="mile2">Mile2</option>
         <option value="mirantis">Mirantis</option>
         <option value="mitre">Mitre</option>
-        <option value="mosseinstitute">Mosse Institute</option>
+        <option value="mosse">Mosse Institute</option>
         <option value="ncsc">National Cyber Security Centre (NCSC)</option>
         <option value="offsec">Offensive Security (OffSec)</option>
         <option value="oceg">Open Compliance and Ethics Group (OCEG)</option>
@@ -2788,7 +2791,6 @@ psd" data-vendor="scrumorg" href="https://www.scrum.org/professional-scrum-devel
         <option value="suse">Software und System-Entwicklung (SUSE)</option>
         <option value="splunk">Splunk</option>
         <option value="tuv">Technischer Überwachungsverein Rheinland (TÜV)</option>
-
         <option value="tcm">The Cyber Mentor (TCM) Security</option>
         <option value="theopengroup">The Open Group</option>
         <option value="thesecopsgroup">The SecOps Group</option>
